WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30449
[CHROMIUM] Chromium/skia's canvas arc drawing is incorrect for >= 360 degrees
https://bugs.webkit.org/show_bug.cgi?id=30449
Summary
[CHROMIUM] Chromium/skia's canvas arc drawing is incorrect for >= 360 degrees
Stephen White
Reported
2009-10-16 11:45:25 PDT
When drawing an arc >= 360 degrees (ie., a full circle), the start and end points of the arc are not correctly placed, so any primitives connected to the arc will not be joined at the correct place. See
http://crbug.com/16525
.
Attachments
Proposed fix and new test.
(48.76 KB, patch)
2009-10-16 12:39 PDT
,
Stephen White
no flags
Details
Formatted Diff
Diff
Same as above, with mime-type and executable bit set correctly.
(48.76 KB, patch)
2009-10-16 13:32 PDT
,
Stephen White
abarth
: review+
senorblanco
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2009-10-16 12:39:50 PDT
Created
attachment 41309
[details]
Proposed fix and new test.
Stephen White
Comment 2
2009-10-16 13:32:10 PDT
Created
attachment 41316
[details]
Same as above, with mime-type and executable bit set correctly.
Adam Barth
Comment 3
2009-10-18 23:20:17 PDT
Comment on
attachment 41316
[details]
Same as above, with mime-type and executable bit set correctly. Nice patch. Thanks.
Yong Li
Comment 4
2009-10-19 08:46:44 PDT
Comment on
attachment 41316
[details]
Same as above, with mime-type and executable bit set correctly. Let commit bot land it
Stephen White
Comment 5
2009-10-19 11:15:47 PDT
Comment on
attachment 41316
[details]
Same as above, with mime-type and executable bit set correctly. commit-queue seems reluctant (committers.py problem?); will land manually.
Eric Seidel (no email)
Comment 6
2009-10-19 11:18:07 PDT
Actually, I'm dianosing the failure now. I'd really like to let hte cq try here...
Eric Seidel (no email)
Comment 7
2009-10-19 11:23:33 PDT
It was failing silently due to: Parsing ChangeLog: LayoutTests/ChangeLog ERROR: Failed to parse ChangeLog: /Users/eseidel/Projects/CommitQueue/LayoutTests/ChangeLog I'll post a fix for the commit-queue shortly. For now, this patch needs a new ChangeLog.
Stephen White
Comment 8
2009-10-19 11:47:24 PDT
(In reply to
comment #7
)
> I'll post a fix for the commit-queue shortly. For now, this patch needs a new > ChangeLog.
OK, landed manually as
http://trac.webkit.org/changeset/49794
.
Eric Seidel (no email)
Comment 9
2009-10-19 11:50:43 PDT
Sorry. I got confused.
bug 30281
was the one with the problem. The commit-queue never actually got to this patch because it was hung on
bug 30281
. In the future,
http://webkit-commit-queue.appspot.com/
gives you insight into commit-queue's tiny little brain.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug