WebCore: Fix for chromium/skia canvas arc start/end positions, when the arc is >= 360 degrees. https://bugs.webkit.org/show_bug.cgi?id=30449

Reviewed by Adam Barth.

Covered by new test:
LayoutTests/fast/canvas/arc360.html

* platform/graphics/skia/PathSkia.cpp:
(WebCore::Path::addArc):

LayoutTests: New test for 360 degree arc endpoints, and expected results.
http://bugs.webkit.org/show_bug.cgi?id=30449

Reviewed by Adam Barth.

* fast/canvas/arc360.html: Added.
* platform/mac/fast/canvas/arc360-expected.checksum: Added.
* platform/mac/fast/canvas/arc360-expected.png: Added.
* platform/mac/fast/canvas/arc360-expected.txt: Added.



Canonical link: https://commits.webkit.org/41248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49794 268f45cc-cd09-0410-ab3c-d52691b4dbfc